project is now a card prop as well as fixed alignments in index

--- a/css/index.css
+++ b/css/index.css
@@ -240,6 +240,6 @@ body{
     transition: width 0.3s ease-in-out;
 }
 
-/* #load {
-    display: none;
-} */
+.word{
+    padding-left: 5px;
+}
